cambio datos acceso a la base

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_USER=FcityUEGrootStckProd
-DB_PASSWORD=FarmaSecurity_1
-DB_SERVER=dev-suc
-DB_NAME=DBSucserver
+DB_USER=bitwebuser
+DB_PASSWORD=Nanuss.3916x
+DB_SERVER=localhost
+DB_NAME=bitwebdb
 DB_ENCRYPT=true
 DB_TRUST_CERT=true
 
